Atualização do index.html
aprendendo a funcionalidade pull

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Comentário para simulação de erro-->
    <p> Olá Git! </p> 
 </body>
 </html>
